--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=rtcc
 spring.datasource.url=jdbc:postgresql://localhost:5432/rtcc
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=password
 #api.security.token.secret=${JWT_SECRET:my-secret-key}
