✨ feat(api tcc): post, get, delee * Implementa a api para os métodos post, get, getall, delete * Falta implementar o método put

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rtcc
 spring.datasource.username=postgres
 spring.datasource.password=password
 #api.security.token.secret=${JWT_SECRET:my-secret-key}
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=250MB
+spring.servlet.multipart.max-file-size=250MB
