--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=password
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=250MB
 spring.servlet.multipart.max-file-size=250MB
+# keys for JWT
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
