--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.servlet.multipart.max-file-size=250MB
 # keys for JWT
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rtcc.ifnmg@gmail.com
+spring.mail.password=hzlu gfyc uqyj sdwc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
