--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ jwt.public.key=classpath:app.pub
 # mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rtcc.ifnmg@gmail.com
-spring.mail.password=hzlu gfyc uqyj sdwc
+spring.mail.username=coloqueseu@email.aqui
+spring.mail.password=coloque a senha de app aqui
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
