--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,10 +9,14 @@ spring.servlet.multipart.max-file-size=250MB
 # keys for JWT
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
-# mail
+# mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=coloqueseu@email.aqui
-spring.mail.password=coloque a senha de app aqui
+spring.mail.username=${MAIL_USERNAME:rtcc.ifnmg@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:senha-padrao}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#Quandno der erro de SSL no envio de email, descomente as linhas abaixo.
+# -------- NÃO RECOMENDADO PARA AMBIENTE DE PRODUÇÃO ----------
+#spring.mail.properties.mail.smtp.ssl.trust=*
+#spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
